--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,7 +8,6 @@
     <title>MOCD Integrations | @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @*<link href="~/Content/bootstrap/bootstrap.css" rel="stylesheet" />*@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
 </head>
 <body dir="rtl">
@@ -18,6 +19,12 @@
                 {
                     <li><p class="nav navbar-text navbar-right">مرحبا, @User.Identity.Name</p></li>
                     <li>@Html.ActionLink("تسجيل الخروج", "Logout", "Account", null, new { @class = "nav-link" })</li>
+                    if (User.IsInRole("Admin"))
+                    {
+                        <li>@Html.ActionLink("إدارة الأدوار", "Index", "Role", null, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("إدارة الصلاحيات", "Index", "Permission", null, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("إدارة المستخدمين", "Index", "User", null, new { @class = "nav-link" })</li>
+                    }
                 }
                 else
                 {
@@ -52,3 +59,5 @@
     <script src="~/Scripts/maskedtextbox.js"></script>
 </body>
 </html>
+
+
